...
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/text_memo_note"
        android:layout_width="368dp"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textMultiLine"
...
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_memo_title"
        android:text="@string/author"/>
    <EditText
        android:id="@+id/text_memo_author"
        android:layout_width="@dimen/width_half_layout"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@+id/tv_author"
        app:layout_constraintTop_toBottomOf="@+id/text_memo_title"/>

...
