<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mehdi.memo.EditorActivity">
    <item android:id="@+id/action_save"
        android:title="@string/save"
        android:icon="@drawable/ic_done"
        app:showAsAction="always"
        />
    <item android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/delete"
        app:showAsAction="ifRoom"
        />

</menu>